--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-2 order-lg-1" data-aos="fade-right" data-aos-delay="200">
             <div class="hero-content">
-              <h1 class="hero-title">Aset Digital Premium untuk Produktivitas Anda</h1>
-              <p class="hero-description">Temukan E-book, Video Course, Preset Lightroom, dan Template Notion terbaik di RKMAULIDA. Investasi leher ke atas dimulai di sini.</p>
+              <h1 class="hero-title">Satu Link Untuk Semua Karya Digital</h1>
+              <p class="hero-description">E-book dan layanan digital yang bisa kamu akses dengan mudah dalam satu tempat</p>
               <div class="hero-actions">
                 <a href="#pricing" class="btn-primary">Lihat Katalog</a>
                 <a href="#bundling" class="btn-secondary">
