--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <div class="bundling-section">
           <div class="row align-items-center">
             <div class="col-lg-5 text-center mb-4 mb-lg-0">
-               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid rounded shadow" alt="Paket Bundling">
+               <img src="assets/img/portfolio/diskon.png" class="img-fluid rounded shadow" alt="Paket Bundling">
             </div>
             <div class="col-lg-7">
               <span class="badge bg-warning text-dark mb-3 px-3 py-2 rounded-pill">🔥 LIMITED OFFER</span>
