--- a/index.html
+++ b/index.html
@@ -69,6 +69,115 @@
       margin-bottom: 5px;
     }
 
+    /* --- ANIMASI CSS UNTUK BUNDLING (PENGGANTI GAMBAR) --- */
+    .bundling-anim-wrapper {
+        position: relative;
+        width: 100%;
+        height: 300px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    /* Efek Cahaya/Glow di belakang */
+    .anim-glow {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        background: rgba(255, 193, 7, 0.3);
+        border-radius: 50%;
+        filter: blur(40px);
+        animation: pulse-glow 3s infinite ease-in-out;
+    }
+
+    /* Container Kartu */
+    .anim-stack {
+        position: relative;
+        width: 180px;
+        height: 240px;
+    }
+
+    /* Style Dasar Kartu */
+    .anim-card {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 15px;
+        border: 1px solid rgba(255,255,255,0.2);
+        box-shadow: 0 15px 35px rgba(0,0,0,0.3);
+        transition: all 0.5s ease;
+    }
+
+    /* Kartu Belakang */
+    .card-back {
+        background: linear-gradient(135deg, #6610f2, #520dc2);
+        top: 0;
+        left: 0;
+        transform: rotate(-10deg) translate(-20px, 10px);
+        z-index: 1;
+        animation: float-back 4s infinite ease-in-out alternate;
+    }
+
+    /* Kartu Tengah */
+    .card-mid {
+        background: linear-gradient(135deg, #0dcaf0, #0aa2c0);
+        top: 0;
+        left: 0;
+        transform: rotate(5deg) translate(20px, -5px);
+        z-index: 2;
+        animation: float-mid 3.5s infinite ease-in-out alternate;
+    }
+
+    /* Kartu Depan (Utama) */
+    .card-front {
+        background: linear-gradient(135deg, #ffc107, #ff9800);
+        top: 0;
+        left: 0;
+        z-index: 3;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: #fff;
+        transform: rotate(-3deg);
+        animation: float-front 3s infinite ease-in-out alternate;
+    }
+
+    .card-front i {
+        font-size: 3rem;
+        margin-bottom: 10px;
+        text-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    }
+
+    .card-front span {
+        font-weight: 800;
+        font-size: 1.5rem;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        text-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    }
+
+    /* Keyframes Animasi */
+    @keyframes float-front {
+        0% { transform: translateY(0) rotate(-3deg); }
+        100% { transform: translateY(-15px) rotate(-3deg); }
+    }
+    @keyframes float-mid {
+        0% { transform: translateY(0) rotate(5deg) translate(20px, -5px); }
+        100% { transform: translateY(-10px) rotate(5deg) translate(20px, -5px); }
+    }
+    @keyframes float-back {
+        0% { transform: translateY(0) rotate(-10deg) translate(-20px, 10px); }
+        100% { transform: translateY(-12px) rotate(-10deg) translate(-20px, 10px); }
+    }
+    @keyframes pulse-glow {
+        0% { transform: scale(0.8); opacity: 0.5; }
+        50% { transform: scale(1.2); opacity: 0.8; }
+        100% { transform: scale(0.8); opacity: 0.5; }
+    }
+    /* ---------------------------------------------------- */
+
     /* Styling Foto Profil di Testimoni */
     .testimonial-item .profile {
       display: flex;
@@ -459,9 +568,21 @@
       <div class="container" data-aos="zoom-in">
         <div class="bundling-section">
           <div class="row align-items-center">
-            <div class="col-lg-5 text-center mb-4 mb-lg-0">
-               <img src="assets/img/portfolio/diskon.png" class="img-fluid rounded shadow" alt="Paket Bundling">
+            
+            <div class="col-lg-5 mb-5 mb-lg-0">
+               <div class="bundling-anim-wrapper">
+                   <div class="anim-glow"></div>
+                   <div class="anim-stack">
+                       <div class="anim-card card-back"></div>
+                       <div class="anim-card card-mid"></div>
+                       <div class="anim-card card-front">
+                           <i class="bi bi-gift-fill"></i>
+                           <span>BUNDLE<br>HEMAT</span>
+                       </div>
+                   </div>
+               </div>
             </div>
+
             <div class="col-lg-7">
               <span class="badge bg-warning text-dark mb-3 px-3 py-2 rounded-pill">🔥 LIMITED OFFER</span>
               <h2 class="text-white fw-bold mb-3">PAKET SULTAN (All Access)</h2>
