--- a/index.html
+++ b/index.html
@@ -657,8 +657,8 @@
                 <div class="profile">
                   <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                   <div>
-                    <h3>Sari Rahmawati</h3>
-                    <h4>Freelancer Pemula</h4>
+                    <h3>Angga CEO</h3>
+                    <h4>CEO PT Cinta Abadi</h4>
                   </div>
                 </div>
               </div>
@@ -673,8 +673,8 @@
                 <div class="profile">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                   <div>
-                    <h3>Budi Santoso</h3>
-                    <h4>Hobi Fotografi</h4>
+                    <h3>Mbak AL</h3>
+                    <h4>Mahasiswi</h4>
                   </div>
                 </div>
               </div>
@@ -689,8 +689,8 @@
                 <div class="profile">
                   <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                   <div>
-                    <h3>Ibu Rina</h3>
-                    <h4>UMKM Owner</h4>
+                    <h3>Culiss</h3>
+                    <h4>Konten Kreator</h4>
                   </div>
                 </div>
               </div>
@@ -705,8 +705,8 @@
                 <div class="profile">
                   <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                   <div>
-                    <h3>Dimas Anggara</h3>
-                    <h4>Mahasiswa</h4>
+                    <h3>Hudaaaaaaaaa</h3>
+                    <h4>Calon BOS</h4>
                   </div>
                 </div>
               </div>
@@ -823,8 +823,8 @@
           </a>
           <p>Platform edukasi dan aset digital terpercaya. Kami membantu kreator dan pebisnis online bertumbuh lebih cepat.</p>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-tiktok"></i></a>
+            <a href="https://www.instagram.com/rkmaulidaa?igsh=MWFzcHhqZGlvdW93eQ%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.tiktok.com/@rk.maulida?_r=1&_t=ZS-93QPkAwXPM4"><i class="bi bi-tiktok"></i></a>
             <a href=""><i class="bi bi-youtube"></i></a>
           </div>
         </div>
