--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
       transform: scale(1.05);
     }
 
+    /* --- PERBAIKAN: RIBBON TERLARIS --- */
+    /* Menambahkan z-index tinggi agar pita selalu di atas foto */
+    .ribbon {
+      z-index: 50 !important; 
+    }
+
     /* Styling Section Promo Bundling */
     .bundling-section {
       background: linear-gradient(135deg, #0d6efd 0%, #0a58ca 100%);
