--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        ========================================= */
     .hero {
       padding: 140px 0 80px 0;
-      background: #f8faff; 
+      background: #ffffff; 
       position: relative;
       overflow: hidden;
     }
@@ -62,9 +62,10 @@
       position: absolute;
       top: -10%;
       right: -5%;
-      width: 500px;
-      height: 500px;
-      background: radial-gradient(circle, rgba(37, 99, 235, 0.1) 0%, rgba(255,255,255,0) 70%);
+      width: 600px;
+      height: 600px;
+      /* Warna glow dibuat sangat halus */
+      background: radial-gradient(circle, rgba(37, 99, 235, 0.05) 0%, rgba(255,255,255,0) 60%);
       border-radius: 50%;
       z-index: 0;
       pointer-events: none;
