--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
               <div class="hero-image-wrapper">
                 
                 
-                <img src="https://cdni.iconscout.com/illustration/premium/thumb/business-woman-working-on-laptop-illustration-download-in-svg-png-gif-file-formats--young-lady-female-office-employee-character-3d-pack-people-illustrations-4715124.png?f=webp" class="hero-image" alt="3D Character">
+                <img src="assets/img/illustration/illustration-15.webp" class="img-fluid hero-img-main" alt="Hero Image">
 
                 <div class="floating-card card-1">
                   <div class="card-icon icon-1"><i class="bi bi-book-fill"></i></div>
