--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="description" content="Pusat produk digital berkualitas: E-book, Course, Template Notion, dan Preset Lightroom.">
   <meta name="keywords" content="rkmaulida, produk digital, ebook bisnis, preset lightroom, kelas online">
 
-  <link href="https://placehold.co/32x32/0d6efd/ffffff?text=R" rel="icon">
-  <link href="https://placehold.co/180x180/0d6efd/ffffff?text=R" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -317,7 +317,7 @@
           <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="200">
             <div class="hero-visual">
               <div class="hero-image-wrapper">
-                <img src="https://placehold.co/600x600/f1f5f9/0d6efd?text=Hero+Image" class="img-fluid hero-img-main" alt="Hero Image">
+                <img src="assets/img/illustration/illustration-15.webp" class="img-fluid hero-img-main" alt="Hero Image">
 
                 <div class="floating-card card-1">
                   <div class="card-icon icon-1"><i class="bi bi-book-fill"></i></div>
@@ -375,7 +375,7 @@
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="300">
             <div class="visual-section">
               <div class="main-image-container">
-                 <img src="https://placehold.co/600x400/e2e8f0/64748b?text=About+Us" alt="Tentang RKMAULIDA" class="img-fluid main-visual" style="border-radius:16px;">
+                 <img src="assets/img/about/about-8.webp" alt="Tentang RKMAULIDA" class="img-fluid main-visual" style="border-radius:16px;">
               </div>
             </div>
           </div>
@@ -427,7 +427,7 @@
                   </div>
                 </div>
                 <div class="col-lg-7">
-                  <div class="visual-content"><img src="https://placehold.co/600x400/f8f9fa/dee2e6?text=Fitur+Otomatis" class="img-fluid" alt=""></div>
+                  <div class="visual-content"><img src="assets/img/features/features-1.webp" class="img-fluid" alt=""></div>
                 </div>
               </div>
             </div>
@@ -444,7 +444,7 @@
                   </div>
                 </div>
                 <div class="col-lg-7">
-                  <div class="visual-content"><img src="https://placehold.co/600x400/f8f9fa/dee2e6?text=Fitur+Aman" class="img-fluid" alt=""></div>
+                   <div class="visual-content"><img src="assets/img/features/features-2.webp" class="img-fluid" alt=""></div>
                 </div>
               </div>
             </div>
@@ -457,7 +457,7 @@
                   </div>
                 </div>
                 <div class="col-lg-7">
-                  <div class="visual-content"><img src="https://placehold.co/600x400/f8f9fa/dee2e6?text=Fitur+Multi-Device" class="img-fluid" alt=""></div>
+                   <div class="visual-content"><img src="assets/img/features/features-3.webp" class="img-fluid" alt=""></div>
                 </div>
               </div>
             </div>
@@ -547,7 +547,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <article class="price-card h-100">
               <div class="product-img">
-                <img src="https://placehold.co/400x300/e9ecef/495057?text=E-Book+Cover" alt="Ebook Bisnis">
+                <img src="assets/img/blog/blog-1.jpg" alt="Ebook Bisnis">
               </div>
               <div class="card-head">
                 <span class="badge-title">E-BOOK</span>
@@ -572,7 +572,7 @@
             <article class="price-card featured h-100 position-relative">
               <div class="ribbon"><i class="bi bi-fire"></i> Terlaris</div>
               <div class="product-img">
-                <img src="https://placehold.co/400x300/ffec99/856404?text=Course+Cover" alt="Kelas Canva">
+                 <img src="assets/img/blog/blog-2.jpg" alt="Kelas Canva">
               </div>
               <div class="card-head">
                 <span class="badge-title">COURSE</span>
@@ -596,7 +596,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <article class="price-card h-100">
               <div class="product-img">
-                <img src="https://placehold.co/400x300/dbeafe/1e40af?text=Preset+Cover" alt="Preset Lightroom">
+                 <img src="assets/img/blog/blog-3.jpg" alt="Preset Lightroom">
               </div>
               <div class="card-head">
                 <span class="badge-title">PRESET</span>
@@ -704,7 +704,7 @@
                 <div class="stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
                 <p>"Gila sih, E-booknya daging semua isinya! Dulu bingung mau mulai dari mana, sekarang udah pecah telor dapat klien pertama dari panduan ini."</p>
                 <div class="profile">
-                  <img src="https://placehold.co/100x100/e2e8f0/64748b?text=User" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                   <div><h3>Angga CEO</h3><h4>CEO PT Cinta Abadi</h4></div>
                 </div>
               </div>
@@ -714,7 +714,7 @@
                 <div class="stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
                 <p>"Presetnya estetik parah. Foto liburan saya jadi kayak foto selebgram. Worth it banget harga segitu dapat banyak preset."</p>
                 <div class="profile">
-                  <img src="https://placehold.co/100x100/e2e8f0/64748b?text=User" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                   <div><h3>Mbak AL</h3><h4>Mahasiswi</h4></div>
                 </div>
               </div>
@@ -724,7 +724,7 @@
                 <div class="stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
                 <p>"Kelas Canvanya mudah dipahami. Saya ibu rumah tangga gaptek aja bisa ngikutin. Sekarang bisa bantu suami bikin desain promosi."</p>
                 <div class="profile">
-                  <img src="https://placehold.co/100x100/e2e8f0/64748b?text=User" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                   <div><h3>Culiss</h3><h4>Konten Kreator</h4></div>
                 </div>
               </div>
@@ -734,7 +734,7 @@
                 <div class="stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
                 <p>"Ambil paket bundling pas promo, untung banget! Materi lengkap, support adminnya juga ramah dan fast respon."</p>
                 <div class="profile">
-                  <img src="https://placehold.co/100x100/e2e8f0/64748b?text=User" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                   <div><h3>Hudaaaaaaaaa</h3><h4>Calon BOS</h4></div>
                 </div>
               </div>
