--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
             <article class="price-card featured h-100 position-relative">
               <div class="ribbon"><i class="bi bi-fire"></i> Terlaris</div>
               <div class="product-img">
-                 <img src="assets/img/blog/blog-2.jpg" alt="Kelas Canva">
+                 <img src="assets/img/blog/blog-2.png" alt="Kelas Canva">
               </div>
               <div class="card-head">
                 <span class="badge-title">COURSE</span>
