--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-      <a class="btn-getstarted" href="#pricing">Belanja Sekarang</a>
+      <a class="btn-getstarted" href="https://lynk.id/rkmaulida">Belanja Sekarang</a>
     </div>
   </header>
 
