--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Rubik:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -34,16 +34,27 @@
       font-family: 'Rubik', sans-serif;
     }
 
-    /* --- NAVBAR LOGO --- */
+    /* --- UPDATE LOGO STYLE (MODERN) --- */
     .sitename {
-      font-size: 1.8rem;
+      font-family: 'Poppins', sans-serif !important;
+      font-size: 1.6rem;
+      display: flex;
+      align-items: baseline;
+      gap: 3px;
+    }
+    .logo-prefix {
+      font-weight: 500;
+      font-size: 1rem;
+      color: #64748b; /* Abu-abu Soft */
+      letter-spacing: -0.5px;
+    }
+    .logo-main {
       font-weight: 800;
       letter-spacing: -0.5px;
       text-transform: uppercase;
       background: linear-gradient(135deg, #0d6efd, #0dcaf0); 
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      color: #0d6efd;
     }
 
     /* --- HERO SECTION (Lynk.id Style) --- */
@@ -129,18 +140,32 @@
     .card-icon {
       width: 40px; height: 40px; border-radius: 10px;
       display: flex; align-items: center; justify-content: center;
-      font-size: 1.2rem; color: white;
+      font-size: 1.2rem; 
     }
     .card-info h5 { font-size: 0.9rem; font-weight: 700; margin: 0; color: #334155; }
     .card-info p { font-size: 0.75rem; margin: 0; color: #64748b; }
 
-    /* Card Positions & Colors */
+    /* --- UPDATE COLOR HARMONY (FLOATING CARDS) --- */
     .card-1 { top: 25%; left: -20px; animation: float-card 5s ease-in-out infinite 0s; }
-    .icon-1 { background: linear-gradient(135deg, #f59e0b, #d97706); }
+    .icon-1 { 
+        background: white; 
+        color: #0d6efd; 
+        border: 1px solid #e2e8f0; 
+    } /* Updated: White & Blue */
+
     .card-2 { bottom: 15%; right: -10px; animation: float-card 5s ease-in-out infinite 1.5s; }
-    .icon-2 { background: linear-gradient(135deg, #0d6efd, #0a58ca); }
+    .icon-2 { 
+        background: linear-gradient(135deg, #0d6efd, #0dcaf0); 
+        color: white; 
+        box-shadow: 0 4px 12px rgba(13, 110, 253, 0.2);
+    } /* Updated: Blue Gradient */
+
     .card-3 { top: 10%; right: 30px; animation: float-card 6s ease-in-out infinite 0.5s; padding: 8px 12px; }
-    .icon-3 { background: linear-gradient(135deg, #198754, #157347); width: 30px; height: 30px; font-size: 0.9rem; }
+    .icon-3 { 
+        background: #e0f2fe; 
+        color: #0ea5e9; 
+    } /* Updated: Soft Light Blue */
+
 
     /* Hero Stats */
     .hero-stats {
@@ -189,7 +214,15 @@
       margin-top: 60px; box-shadow: 0 15px 40px rgba(13, 110, 253, 0.3);
       overflow: hidden; position: relative;
     }
-    .bundling-price { font-size: 3rem; font-weight: 800; color: #ffc107; line-height: 1; }
+    
+    /* Updated: Bundling Price color to White */
+    .bundling-price { 
+        font-size: 3rem; 
+        font-weight: 800; 
+        color: #ffffff; 
+        line-height: 1; 
+        text-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
     .old-price { text-decoration: line-through; opacity: 0.7; font-size: 1.5rem; margin-bottom: 5px; }
 
     .bundling-anim-wrapper {
@@ -205,28 +238,51 @@
     
     .anim-card {
       position: absolute; width: 100%; height: 100%;
-      border-radius: 15px; border: 1px solid rgba(255,255,255,0.2);
+      border-radius: 15px; 
       box-shadow: 0 15px 35px rgba(0,0,0,0.3); transition: all 0.5s ease;
     }
+
+    /* --- UPDATE COLOR HARMONY (BUNDLING CARDS) --- */
     .card-anim-back {
-      background: linear-gradient(135deg, #6610f2, #520dc2);
+      /* Updated: Dark Blue */
+      background: linear-gradient(135deg, #0a58ca, #06357a); 
+      border: 1px solid rgba(255,255,255,0.1);
       transform: rotate(-10deg) translate(-20px, 10px);
       z-index: 1; animation: float-back 4s infinite ease-in-out alternate;
     }
     .card-anim-mid {
-      background: linear-gradient(135deg, #0dcaf0, #0aa2c0);
+      /* Updated: Medium Blue */
+      background: linear-gradient(135deg, #0d6efd, #3b82f6);
+      opacity: 0.8;
+      border: 1px solid rgba(255,255,255,0.2);
       transform: rotate(5deg) translate(20px, -5px);
       z-index: 2; animation: float-mid 3.5s infinite ease-in-out alternate;
     }
     .card-anim-front {
-      background: linear-gradient(135deg, #ffc107, #ff9800);
+      /* Updated: White Glassmorphism */
+      background: rgba(255, 255, 255, 0.95);
+      border: 1px solid rgba(255,255,255,1);
       z-index: 3; display: flex; flex-direction: column;
       align-items: center; justify-content: center; text-align: center;
-      color: #fff; transform: rotate(-3deg);
+      color: #0d6efd; /* Blue Text */
+      transform: rotate(-3deg);
+      box-shadow: 0 20px 50px rgba(0,0,0,0.15);
       animation: float-front 3s infinite ease-in-out alternate;
     }
-    .card-anim-front i { font-size: 3rem; margin-bottom: 10px; }
-    .card-anim-front span { font-weight: 800; font-size: 1.5rem; letter-spacing: 1px; }
+    .card-anim-front i { 
+        /* Updated: Gradient Icon */
+        font-size: 3.5rem; 
+        margin-bottom: 10px; 
+        background: -webkit-linear-gradient(#0d6efd, #0dcaf0);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+    .card-anim-front span { 
+        font-weight: 800; 
+        font-size: 1.5rem; 
+        letter-spacing: 1px; 
+        color: #1e293b; /* Dark text for readability */
+    }
 
     @keyframes float-front { 0% { transform: translateY(0) rotate(-3deg); } 100% { transform: translateY(-15px) rotate(-3deg); } }
     @keyframes float-mid { 0% { transform: translateY(0) rotate(5deg) translate(20px, -5px); } 100% { transform: translateY(-10px) rotate(5deg) translate(20px, -5px); } }
@@ -262,7 +318,9 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <h1 class="sitename">RKMAULIDA</h1>
+        <h1 class="sitename">
+          <span class="logo-prefix">lynk.id/</span><span class="logo-main">RKMAULIDA</span>
+        </h1>
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -822,7 +880,9 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">RKMAULIDA</span>
+             <span class="sitename">
+                <span style="font-size:1.2rem; font-weight:500; color:#888;">lynk.id/</span><span style="background:linear-gradient(135deg, #0d6efd, #0dcaf0); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">RKMAULIDA</span>
+             </span>
           </a>
           <p>Platform edukasi dan aset digital terpercaya. Kami membantu kreator dan pebisnis online bertumbuh lebih cepat.</p>
           <div class="social-links d-flex mt-4">
