--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
             <div class="content-wrapper">
               <div class="section-header">
-                <span class="section-badge" style="color: #00a99d; font-weight:700;">TENTANG RKMAULIDA</span>
+                <span class="section-badge" style="color: rgba(0, 169, 157, 0.6); font-weight:700;">TENTANG RKMAULIDA</span>
                 <h2>Solusi Belajar Praktis & Terjangkau</h2>
               </div>
               <p class="lead-text">Kami menyediakan materi pembelajaran digital yang disusun oleh praktisi berpengalaman untuk membantu Anda meningkatkan skill di era digital.</p>
@@ -484,7 +484,7 @@
 
     <section id="features" class="features section">
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title" style="color:#00a99d">Fitur</span>
+        <span class="description-title" style="color: rgba(0, 169, 157, 0.6);">Fitur</span>
         <h2>Mengapa Belanja Di Sini?</h2>
         <p>Keunggulan layanan kami dibanding toko produk digital lainnya</p>
       </div>
@@ -537,7 +537,7 @@
 
     <section id="services" class="services section">
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title" style="color:#00a99d">Kategori</span>
+        <span class="description-title" style="color: rgba(0, 169, 157, 0.6);">Kategori</span>
         <h2>Kategori Produk</h2>
         <p>Pilih jenis produk digital yang sesuai dengan kebutuhan Anda</p>
       </div>
@@ -569,7 +569,7 @@
 
     <section id="pricing" class="pricing section">
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title" style="color:#00a99d">Katalog</span>
+        <span class="description-title" style="color: rgba(0, 169, 157, 0.6);">Katalog</span>
         <h2>Produk Unggulan</h2>
         <p>Produk terlaris yang paling banyak dicari minggu ini</p>
       </div>
@@ -709,7 +709,7 @@
 
     <section id="testimonials" class="testimonials section light-background">
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title" style="color:#00a99d">Testimoni</span>
+        <span class="description-title" style="color: rgba(0, 169, 157, 0.6);">Testimoni</span>
         <h2>Apa Kata Mereka?</h2>
         <p>Cerita asli dari pelanggan yang sudah merasakan manfaat produk kami</p>
       </div>
@@ -770,7 +770,7 @@
 
     <section id="faq" class="faq section">
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title" style="color:#00a99d">Bantuan</span>
+        <span class="description-title" style="color: rgba(0, 169, 157, 0.6);">Bantuan</span>
         <h2>Pertanyaan Umum</h2>
         <p>Hal-hal yang sering ditanyakan seputar pembelian dan produk</p>
       </div>
@@ -801,7 +801,7 @@
 
     <section id="contact" class="contact section light-background">
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title" style="color:#00a99d">Kontak</span>
+        <span class="description-title" style="color: rgba(0, 169, 157, 0.6);">Kontak</span>
         <h2>Hubungi Kami</h2>
         <p>Punya pertanyaan lain? Tim kami siap membantu Anda.</p>
       </div>
@@ -809,7 +809,7 @@
         <div class="row g-5">
           <div class="col-lg-6">
             <div class="content" data-aos="fade-up" data-aos-delay="200">
-              <div class="section-category mb-3" style="color:#00a99d; font-weight:700;">LAYANAN PELANGGAN</div>
+              <div class="section-category mb-3" style="color: rgba(0, 169, 157, 0.6); font-weight:700;">LAYANAN PELANGGAN</div>
               <h2 class="display-5 mb-4">Kami Siap Membantu 24/7</h2>
               <p class="lead mb-4">Jangan ragu untuk menghubungi kami jika ada kendala saat checkout atau download file.</p>
               <div class="contact-info mt-5">
