--- a/index.html
+++ b/index.html
@@ -33,24 +33,41 @@
       font-family: 'Rubik', sans-serif;
     }
 
-    /* --- NAVBAR LOGO STYLING --- */
+    /* --- NAVBAR LOGO STYLING (UPDATED: LYNK.ID STYLE & ABU-ABU SAMAR) --- */
     .sitename {
+      display: flex;
+      flex-direction: column; /* Susun atas-bawah */
+      justify-content: center;
+      line-height: 1;
+    }
+
+    /* Tulisan lynk.id (Kecil di atas) */
+    .logo-prefix {
+      font-size: 0.9rem;
+      font-weight: 500;
+      color: #94a3b8; /* Abu-abu sedang */
+      letter-spacing: 0.5px;
+      margin-bottom: 2px;
+    }
+
+    /* Tulisan RKMAULIDA (Besar di bawah, Abu-abu Samar) */
+    .logo-main {
       font-size: 1.8rem;
       font-weight: 800;
-      letter-spacing: -0.5px;
       text-transform: uppercase;
-      /* UBAH: Gradient Hijau Tosca */
-      background: linear-gradient(135deg, #00a99d, #34d399); 
+      letter-spacing: -0.5px;
+      /* Gradient Abu-abu ke Silver (Efek Samar/Elegan) */
+      background: linear-gradient(135deg, #9ca3af, #d1d5db); 
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      /* Fallback warna */
-      color: #00a99d;
+      /* Fallback jika browser tidak support gradient text */
+      color: #9ca3af; 
     }
 
     /* --- HERO SECTION --- */
     .hero {
       padding: 140px 0 80px 0;
-      /* UBAH: Background tint hijau muda */
+      /* Background tint hijau muda */
       background: #f0fdfa; 
       position: relative;
       overflow: hidden;
@@ -64,7 +81,7 @@
       right: -5%;
       width: 500px;
       height: 500px;
-      /* UBAH: Aura Hijau */
+      /* Aura Hijau */
       background: radial-gradient(circle, rgba(0, 169, 157, 0.1) 0%, rgba(255,255,255,0) 70%);
       border-radius: 50%;
       z-index: 0;
@@ -91,7 +108,7 @@
 
     /* --- BUTTONS (HIJAU) --- */
     .btn-primary-modern {
-      /* UBAH: Hijau */
+      /* Hijau */
       background: #00a99d;
       color: white;
       padding: 12px 35px;
@@ -113,7 +130,7 @@
 
     .btn-secondary-modern {
       background: white;
-      /* UBAH: Text Hijau */
+      /* Text Hijau */
       color: #00a99d;
       padding: 12px 35px;
       border-radius: 50px;
@@ -162,15 +179,15 @@
     .card-info h5 { font-size: 0.9rem; font-weight: 700; margin: 0; color: #334155; }
     .card-info p { font-size: 0.75rem; margin: 0; color: #64748b; }
 
-    /* UBAH: Icon Colors jadi nuansa Hijau/Emas */
+    /* Icon Colors */
     .card-1 { top: 25%; left: -20px; animation: float-card 5s ease-in-out infinite 0s; }
-    .icon-1 { background: linear-gradient(135deg, #f59e0b, #d97706); } /* Tetap Orange agar kontras */
+    .icon-1 { background: linear-gradient(135deg, #f59e0b, #d97706); } 
 
     .card-2 { bottom: 15%; right: -10px; animation: float-card 5s ease-in-out infinite 1.5s; }
-    .icon-2 { background: linear-gradient(135deg, #00a99d, #34d399); } /* Jadi Hijau */
+    .icon-2 { background: linear-gradient(135deg, #00a99d, #34d399); } 
 
     .card-3 { top: 10%; right: 30px; animation: float-card 6s ease-in-out infinite 0.5s; padding: 8px 12px; }
-    .icon-3 { background: linear-gradient(135deg, #ccfbf1, #99f6e4); color: #00a99d; width: 30px; height: 30px; font-size: 0.9rem; } /* Hijau Muda */
+    .icon-3 { background: linear-gradient(135deg, #ccfbf1, #99f6e4); color: #00a99d; width: 30px; height: 30px; font-size: 0.9rem; } 
 
     @keyframes float-main { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-15px); } }
     @keyframes float-card { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
@@ -182,7 +199,7 @@
     }
     .stat-number-hero {
       font-size: 2rem; font-weight: 800;
-      /* UBAH: Hijau */
+      /* Hijau */
       color: #00a99d;
       display: block; line-height: 1; margin-bottom: 5px;
     }
@@ -209,10 +226,10 @@
       transition: transform 0.3s ease;
     }
     .price-card:hover .product-img img { transform: scale(1.05); }
-    /* UBAH: Ribbon Hijau */
+    /* Ribbon Hijau */
     .ribbon { 
       z-index: 50 !important; 
-      background-color: #00a99d !important; /* Tambahan force color */
+      background-color: #00a99d !important; 
       color: white;
       padding: 5px 15px;
       position: absolute;
@@ -222,9 +239,9 @@
       font-size: 0.85rem;
       box-shadow: -2px 2px 5px rgba(0,0,0,0.1);
     }
-    /* UBAH: Harga Hijau */
+    /* Harga Hijau */
     .price { color: #00a99d !important; }
-    /* UBAH: Badge Hijau */
+    /* Badge Hijau */
     .badge-title { 
         color: #00a99d; 
         background: #e0fcf9; 
@@ -234,12 +251,11 @@
         font-size: 0.75rem; 
         letter-spacing: 1px;
     }
-    /* UBAH: Button Beli Hijau */
+    /* Button Beli Hijau */
     .btn-choose { background: #00a99d !important; color: white !important; }
     .feature-list i { color: #00a99d !important; }
 
     /* --- BUNDLING SECTION (TETAP BIRU) --- */
-    /* Sesuai permintaan, bagian ini dibiarkan Biru/Ungu agar beda */
     .bundling-section {
       background: linear-gradient(135deg, #0d6efd 0%, #0a58ca 100%);
       color: white; border-radius: 20px; padding: 50px;
@@ -269,7 +285,7 @@
     /* --- ABOUT STATS --- */
     .stats-grid { display: flex !important; flex-direction: row !important; flex-wrap: nowrap !important; justify-content: space-between; gap: 10px; margin-top: 30px; width: 100%; }
     .stat-item { flex: 1 !important; background: #ffffff; padding: 15px 5px; border-radius: 8px; border: 1px solid #e0e0e0; text-align: center; display: flex; flex-direction: column; justify-content: center; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.03); min-width: 0; }
-    /* UBAH: Angka Hijau */
+    /* Angka Hijau */
     .stat-number { font-size: 1.5rem; font-weight: bold; color: #00a99d; margin-bottom: 5px; }
     .stat-label { font-size: 0.8rem; color: #666; white-space: nowrap; }
     @media (max-width: 576px) { .stat-number { font-size: 1.1rem; } .stat-label { font-size: 0.7rem; } }
@@ -326,7 +342,10 @@
     <div class="container position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <h1 class="sitename">RKMAULIDA</h1>
+        <h1 class="sitename">
+           <span class="logo-prefix">lynk.id</span>
+           <span class="logo-main">RKMAULIDA</span>
+        </h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
