--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                 <li><i class="bi bi-check-circle"></i> Akses Selamanya</li>
               </ul>
               <div class="cta">
-                <a href="#" class="btn btn-choose w-100">Beli Sekarang</a>
+                <a href="https://lynk.id/rkmaulida" class="btn btn-choose w-100">Beli Sekarang</a>
               </div>
             </article>
           </div>
@@ -678,7 +678,7 @@
                 <li><i class="bi bi-check-circle"></i> Sertifikat Digital</li>
               </ul>
               <div class="cta">
-                <a href="#" class="btn btn-choose w-100">Daftar Kelas</a>
+                <a href="https://lynk.id/rkmaulida" class="btn btn-choose w-100">Daftar Kelas</a>
               </div>
             </article>
           </div>
@@ -703,7 +703,7 @@
                 <li><i class="bi bi-check-circle"></i> Support iOS/Android</li>
               </ul>
               <div class="cta">
-                <a href="#" class="btn btn-choose w-100">Download</a>
+                <a href="https://lynk.id/rkmaulida" class="btn btn-choose w-100">Download</a>
               </div>
             </article>
           </div>
@@ -756,7 +756,7 @@
                   <div class="old-price">Rp 500.000</div>
                   <div class="bundling-price">Rp 149.000</div>
                 </div>
-                <a href="#" class="btn btn-light btn-lg rounded-pill px-5 fw-bold text-primary shadow">AMBIL PROMO SEKARANG</a>
+                <a href="https://lynk.id/rkmaulida" class="btn btn-light btn-lg rounded-pill px-5 fw-bold text-primary shadow">AMBIL PROMO SEKARANG</a>
               </div>
               <p class="small text-white-50 fst-italic mt-3">*Promo berakhir jika kuota habis</p>
             </div>
